[package]
name = "bunny_oxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.24.1"
strum_macros = "0.24.1"
num_enum = "0.5.7"
num-traits = "*"
enum-map = "*"
byteorder = "1.4.3"
crc = "3.0.0"
encoding_rs = "0.8.31"
rabbitizer = { git = "https://github.com/encounter/rabbitizer-rs", rev = "10c279b2ef251c62885b1dcdcfe740b0db8e9956" }
